# argus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUIDE.md  MCP_SERVER_SUMMARY.md  README.md  mcp.json  package.json  test-change-preview.js  test-diff-display.js  test-git-badge.js  test-git-integration.js  test-git-tracking.js  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
.legacy/: .eslintrc.json  CONTRIBUTING.md  GUIDE.md
.legacy/docs/: RUST_CLI_PLAN.md  V0.8.0_RUST_REWRITE.md
.legacy/hooks/: post-tool-use.js  session-start.js  stop.js  utils.js
.legacy/lib/: types.ts
.legacy/lib/rag/: embedder.ts  ranker.ts
.legacy/lib/storage/: database.ts  vector.ts
.legacy/plugins/argus/: web-dashboard.md
.legacy/rust/rules-template/: argus.md
.legacy/scripts/: install.js
.legacy/test/: setup.ts
.smite/: session-metrics.json
docs/: ARCHITECTURE.md
hooks/: pre-tool-use.js
lib/: index.ts
lib/rag/: retriever.ts
lib/storage/: config.ts
lib/validation/: sanitize.ts  schema.ts
plugins/argus/: .mcp.json  README.md  package.json
plugins/argus/.claude-plugin/: plugin.json
plugins/argus/docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  TROUBLESHOOTING.md
plugins/argus/hooks/: context-tracker.js  debug-hook.js  git-utils.js  post-edit.js  post-response.js  post-tool-use.js  pre-prompt.js  pre-tool-use.js  process-queue.js  prompt-registry.js  (+4 more)
src/: lib.rs
src/cli/: commands.rs  output.rs
src/core/: search.rs
tests/: README.md  cross-platform.test.ts  hooks-interception.test.ts  integration.test.ts  integration_test.rs  mcp-handlers.test.ts  performance.bench.ts  storage.test.ts  stress_test.rs  utils.ts  vitest.setup.ts
(+70 files in other folders)
