[package]
name = "argus-tool"
version = "0.8.1"
edition = "2021"
description = "ARGUS - Omniscient memory sentinel for Claude Code"
authors = ["Yanis"]
license = "MIT"
repository = "https://github.com/Pamacea/argus"
keywords = ["claude", "memory", "cli", "semantic-search", "code-context"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
include = ["src/**/*.rs", "src/**/*.rs", "README.md", "LICENSE"]

[lib]
name = "argus_tool"
path = "src/lib.rs"

[[bin]]
name = "argus"
path = "src/main.rs"

[features]
default = []
agent = ["dep:interprocess"]
daemon = ["agent"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono", "functions"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
directories = "5.0"
walkdir = "2.4"
ignore = "0.4"

# Config
toml = "0.8"

# Cross-platform IPC (for agent feature)
interprocess = { version = "2.0", optional = true }

# Utils
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"

# Claude Code plugin integration
serde_yaml = "0.9"

# Platform-specific (for daemon)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
